<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/imageText"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/app_name"
        android:maxLength="1"
        android:textAllCaps="true"
        android:gravity="center"
        android:background="@drawable/green_light_circle"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/green_light_circle" />

    <TextView
        style="@style/textViewOpen"
        android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/username"
        style="@style/textViewOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#B3B3B3"

        android:text="@string/app_name" />

</LinearLayout>
