<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/green_circle"
                android:contentDescription="@string/nav_header_desc"
                android:gravity="center"
                android:maxLength="1"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="48sp" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/nav_header_desc"
                android:gravity="center"
                android:src="@drawable/app_icon"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="-40dp"
                android:background="@drawable/green_light_circle"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/ic_add_a_photo_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">



            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icons8_user_24dp"
                android:hint="Full Name"
                android:padding="18dp"
                android:textColorHint="#606060"
                android:editable="false"
                android:enabled="true"
                android:focusable="false"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_mail_black_24dp"
                android:drawablePadding="10dp"
                android:editable="false"
                android:enabled="true"
                android:focusable="false"
                android:hint="Email"
                android:padding="18dp"
                android:textColorHint="#606060"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icons8_phone_24"
                android:hint="Mobile number"
                android:inputType="number"
                android:padding="18dp"
                android:textColorHint="#606060"
                android:editable="false"
                android:enabled="true"
                android:focusable="false"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/dateofbirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="10dp"
                android:hint="Date Of Birth"
                android:editable="false"
                android:enabled="true"
                android:focusable="false"
                android:padding="18dp"
                android:textColorHint="#606060"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_baseline_wc_24"
                android:drawablePadding="10dp"
                android:hint="Gender"
                android:editable="false"
                android:enabled="true"
                android:focusable="false"
                android:padding="18dp"
                android:textColorHint="#606060"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/icons8_lock_24_fil"
                android:drawablePadding="10dp"
                android:textColorHint="#606060"
                android:hint="Change Password"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textinput_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_marginTop="15dp" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardLinkBankAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"

                android:minHeight="150dp"

                android:orientation="horizontal"
                android:layout_marginTop="20dp"

                app:strokeWidth="1dp"
                app:strokeColor="#ccc"
                app:backgroundTint="@color/white"

                app:cardElevation="0dp"
                app:cardCornerRadius="30dp"
                android:layout_marginBottom="16dp"

                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"


                    android:visibility="visible"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:visibility="visible"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:id="@+id/icType"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:src="@drawable/reject"
                            android:layout_marginBottom="4dp"
                            />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tErrorReject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"


                            android:text="@string/link_bank_account"
                            android:visibility="visible"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="20dp"/>


                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnReject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Click here"
                        android:textStyle="bold"
                        android:visibility="visible"
                        android:textColor="@color/reject_color_background"

                        app:cornerRadius="30dp"
                        android:backgroundTint="@color/text_color_reject"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="12dp"
                        android:textAllCaps="false"
                        android:layout_gravity="bottom|end"
                        />


                </LinearLayout>



            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/linearDetail"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:visibility="visible"
                android:layout_marginTop="16dp"

                android:layout_gravity="center"
                android:orientation="horizontal"
                app:strokeWidth="0dp"
                app:cardBackgroundColor="@color/under_review_back"

                app:cardElevation="0dp"
                app:cardCornerRadius="30dp"
                android:layout_marginBottom="16dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center_vertical"
                    android:visibility="visible"
                    android:padding="16dp"

                    android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:text="🔘 "
                        android:layout_width="wrap_content"
                        android:textColor="@color/text_color_approved"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/bankName2"
                        android:text="HDFC Bank"
                        android:textAllCaps="true"
                        android:layout_width="wrap_content"
                        android:textColor="@color/text_color_approved"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"

                        >

                        <com.google.android.material.textview.MaterialTextView
                            android:text="A/C Number:"
                            android:textColor="@color/text_color_approved"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/numberAC"
                            android:text="******1234"
                            android:textColor="@color/text_color_approved"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <com.google.android.material.textview.MaterialTextView
                            android:text="A/C Holder Name:"
                            android:layout_width="wrap_content"
                            android:textColor="@color/text_color_approved"
                            android:layout_height="wrap_content"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/holderNameAC"
                            android:text="holo"
                            android:layout_width="wrap_content"
                            android:textColor="@color/text_color_approved"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>



                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView

                    android:text="@string/your_bank_information_has_been_verified"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/text_color_approved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"

            android:text="Update Profile"


            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background_accent"
            app:elevation="4dp"
            app:cardCornerRadius="30dp"
            />



    </LinearLayout>

</ScrollView>